--- a/NC1 Project/Base.lproj/Main.storyboard
+++ b/NC1 Project/Base.lproj/Main.storyboard
@@ -26,11 +26,16 @@
                                     <action selector="roundButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="w0D-hP-qBa"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="jumpscare" translatesAutoresizingMaskIntoConstraints="NO" id="KKA-xR-VSQ">
+                                <rect key="frame" x="87" y="384" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="jumpScareImage" destination="KKA-xR-VSQ" id="pao-NN-8TQ"/>
                         <outlet property="roundButton" destination="tBM-IJ-yoq" id="hi1-Ua-01W"/>
                     </connections>
                 </viewController>
@@ -39,4 +44,7 @@
             <point key="canvasLocation" x="-57.971014492753625" y="115.84821428571428"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="jumpscare" width="714" height="1114"/>
+    </resources>
 </document>
